apply plugin: 'java'

sourceCompatibility = 1.9
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}


compileJava {
    options.compilerArgs += ["--add-exports", "javafx.base/com.sun.javafx=ALL-UNNAMED"]
    options.compilerArgs += ["--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"]
}

compileTestJava {
    options.compilerArgs += ["--add-exports", "javafx.base/com.sun.javafx=ALL-UNNAMED"]
    options.compilerArgs += ["--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"]
}

processResources {
    from ('src/main/java') {
        include '**/*.fxml'
        include '**/*.css'
    }
}

def mainClass = 'com.dansoftware.libraryapp.main.Main'

jar {
    manifest {
       attributes 'Main-Class': mainClass
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile group: 'commons-io', name: 'commons-io', version: '2.6'

	compile fileTree(dir: 'external-libraries', include: '*.jar')
}
